# To-Do-App

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  docker-compose.yml  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: config.py  database.py  main.py
backend/src/api/: dependencies.py
backend/src/api/routes/: auth.py  health.py  tasks.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: task.py  user.py
backend/src/services/: auth_service.py  task_service.py
frontend/: .dockerignore  .env.example  .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/auth/: better-auth.config.ts
frontend/src/components/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/services/: api.ts  tasks.ts
history/prompts/001-todo-console/: 001-create-spec.spec.prompt.md  002-generate-tasks.tasks.prompt.md  003-implement-todo-app.implement.prompt.md
specs/001-todo-console/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console/checklists/: requirements.md
specs/002-fullstack-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py  main_agent.py
src/agents/: __init__.py  command_router_agent.py  display_agent.py  storage_agent.py  task_agent.py  todo_app_agent.py  validation_agent.py
src/todo_app/: __init__.py  cli.py  models.py  services.py
(+15 files in other folders)
